--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/nilesh-tiwari-29b270233/"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="https://github.com/nileshtiwari04"><i class="fab fa-github"></i></a></li>
+                        <li><a href="www.linkedin.com/in/aditya-anand-177754136"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/adityaanand613/javascript/tree/master"><i class="fab fa-github"></i></a></li>
                     </ul>
                 </div>
             </div>
